// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontFamily renders 0 1`] = `
Array [
  .c0 {
  font-family: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontFamily renders function 1`] = `
Array [
  .c0 {
  font-family: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontFamily renders invalid theme path 1`] = `
Array [
  .c0 {
  font-family: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontFamily renders negative number 1`] = `
Array [
  .c0 {
  font-family: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontFamily renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-family: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-family: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-family: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-family: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-family: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-family: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-family: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-family: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-family: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-family: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-family: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-family: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-family: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-family: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-family: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-family: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontFamily renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    font-family: July;
  }
}

@media April {
  .c0 {
    font-family: August;
  }
}

@media January {
  .c0 {
    font-family: September;
  }
}

@media April {
  .c0 {
    font-family: November;
  }
}

@media June {
  .c0 {
    font-family: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-family: July;
  }
}

@media April {
  .c0 {
    font-family: August;
  }
}

@media January {
  .c0 {
    font-family: September;
  }
}

@media April {
  .c0 {
    font-family: November;
  }
}

@media June {
  .c0 {
    font-family: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-family: January;
  }
}

@media April {
  .c0 {
    font-family: December;
  }
}

@media January {
  .c0 {
    font-family: April;
  }
}

@media April {
  .c0 {
    font-family: May;
  }
}

@media June {
  .c0 {
    font-family: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-family: January;
  }
}

@media April {
  .c0 {
    font-family: December;
  }
}

@media January {
  .c0 {
    font-family: April;
  }
}

@media April {
  .c0 {
    font-family: May;
  }
}

@media June {
  .c0 {
    font-family: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontFamily renders postitive number 1`] = `
Array [
  .c0 {
  font-family: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontFamily renders string 1`] = `
Array [
  .c0 {
  font-family: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontFamily renders valid theme path 1`] = `
Array [
  .c0 {
  font-family: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-family: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
